[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/commander_damage_row.gd" id="1_row"]

[node name="CommanderDamageRow" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 6
script = ExtResource("1_row")

[node name="MinusButton" type="Button" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(26, 26)
focus_mode = 0
text = "-"

[node name="DamageLabel" type="Label" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(26, 0)
size_flags_horizontal = 4
mouse_filter = 2
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(1, 1, 1, 0.95)
text = "0"

[node name="PlusButton" type="Button" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(26, 26)
focus_mode = 0
text = "+"
